[tool.poetry]
name = "figgie-marl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = "^0.29.1"
jax = {extras = ["cpu"], version = "^0.4.28"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
